GNOME Bugzilla – Bug 783993
system monitor 3.25.x versions fails to build
Last modified: 2017-06-28 07:02:28 UTC
I'm always getting following error message: can't build system monitor: stl_pair.h:134:45: error: use of deleted function ‘ProcInfo::ProcInfo(const ProcInfo&)’
Hello Cynede, what compiler are you using ? Do you have full build log ?
gcc 5.4.0 full log: /var/tmp/portage/gnome-extra/gnome-system-monitor-3.25.3/temp/build.log
sorry :) here https://paste.pound-python.org/show/LhVT7hnqqOUEkyZbVMjt
3.24.0 version builds fine
OK, I can reproduce with g++ 5.4.
I believe that https://git.gnome.org/browse/gnome-system-monitor/commit/?id=f876154239d2ac92381c40cf5ed1e68362000717 fixes it. Tested with gcc 5.4.
cynede@gentoo.org, could you please verify if the current master builds fine?
tested 3.25.3 with this patch, works fine, thank you
Thanks. Marking as fixed based on reported feedback.