After 35d69c72, std::map<pid_t, ProcInfo> requires ProcInfo to be CopyConstructible for older compiler like gcc 5.4. Make it a std::map<pid_t, std::shared_ptr<ProcInfo>> and implement a wrapper to minimize code change.

https://bugzilla.gnome.org/show_bug.cgi?id=783993